whitespace issue fixed

--- a/frontend/nba_frontend/src/App.css
+++ b/frontend/nba_frontend/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   background-image: url('/components/Header/img/background.jpg');
   background-color: #222629;
+  min-height: 1200px;
 }
 
 .App-logo {
